--- a/style.css
+++ b/style.css
@@ -132,7 +132,70 @@ a.mas-demo-btn:last-child{
 .mas-demo-slider-item img{
     filter: drop-shadow(0px 4px 20px rgba(0, 0, 0, 0.08));
 }
-.mas-demo-slider .slick-slide{
+.mas-demo-slider1 .slick-slide, 
+.mas-demo-slider2 .slick-slide, 
+.mas-demo-slider3 .slick-slide{
     margin: 10px 15px;
 }
+.mas-demo-slider3 .slick-dots {
+    display: flex;
+    justify-content: center;
+    padding: 0;
+    list-style-type: none;
+    margin: 0 auto;
+    margin-top: 60px;
+}
+.mas-demo-slider3 .slick-dots button {
+    display: block;
+    width: 16px;
+    height: 16px;
+    padding: 0;
+    border: none;
+    margin: 0 4px;
+    border-radius: 100%;
+    text-indent: -9999px;
+    border: 2px solid  #1A1AFF;
+    transition: all 0.4s;
+    background-color: transparent;
+}
 
+.mas-demo-slider3 .slick-dots li.slick-active button{
+    background-color: #1A1AFF;
+    border: 2px solid  #1A1AFF;
+}
+
+
+.mas-demo-slider3 .prev-arrow, 
+.mas-demo-slider3 .next-arrow {
+    width: 48px;
+    height: 48px;
+    background-image: url(../assets/images/arrow-left.svg);
+    background-color: #fff;
+    background-size: 24px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    border-radius: 5px;
+    position: absolute;
+    top: 42%;
+    left: -110px;
+    z-index: 99;
+    border: none;
+    transform: translateY(-50%);
+    filter: drop-shadow(0px 4px 20px rgba(0, 0, 0, 0.08));
+}
+.mas-demo-slider3 .next-arrow {
+    left: auto;
+    right: -110px;
+    background-image: url(../assets/images/arrow-right.svg);
+}
+
+/*For Tablet Layout*/
+@media (max-width: 1370px) {
+    .mas-demo-slider3 .prev-arrow{
+        left: -15px;
+    }
+    .mas-demo-slider3 .next-arrow {
+        left: auto;
+        right: -15px;
+    }
+}
